Asteria/force-app/main/default/objects/Mining_Site__c/Mining_Site__c.object-meta.xml
<CustomObject>
    <description>A specific asteroid designated as a Mining Site.</description>
    <label>Mining Site</label>
    <nameField>
        <label>Mining Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mining Sites</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>