Asteria/force-app/main/default/objects/Mining_Site__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Items are transported to Inventory from Mining Sites.</description>
    <inlineHelpText>Items are transported to Inventory from Mining Sites.</inlineHelpText>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipLabel>Mining Sites</relationshipLabel>
    <relationshipName>Mining_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>