Asteria/force-app/main/default/objects/Mining_Site__c/fields/Mothership__c.field-meta.xml
<CustomField>
    <fullName>Mothership__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Mothership in charge of this Mining Site.</description>
    <inlineHelpText>The Mothership that oversees this Mining Site.</inlineHelpText>
    <label>Mothership</label>
    <referenceTo>Mothership__c</referenceTo>
    <relationshipLabel>Mining Sites</relationshipLabel>
    <relationshipName>Mining_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>