Asteria/force-app/main/default/objects/Mining_Site__c/fields/Shuttle__c.field-meta.xml
<CustomField>
    <fullName>Shuttle__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Shuttle that services the Mining Site.</description>
    <inlineHelpText>The Shuttle that services the Mining Site.</inlineHelpText>
    <label>Shuttle</label>
    <referenceTo>Shuttle__c</referenceTo>
    <relationshipLabel>Mining Sites</relationshipLabel>
    <relationshipName>Mining_Sites</relationshipName>
    <type>Lookup</type>
</CustomField>